feat: answer class-4-holdout exercise

--- a/class-4-holdout/class-4-holdout.ipynb
+++ b/class-4-holdout/class-4-holdout.ipynb
@@ -1499,6 +1499,37 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Respostas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Observe a variação do valor de *random_state* na divisão dos dados e os respectivos resultados do desempenho na classificação. Como isso afeta os resultados? Explique o impacto de diferentes divisões dos dados de treino/validação/teste no desempenho dos modelos.\n",
+        "\n",
+        "O exemplo demonstra que o treino de um modelo está sujeito à vies introduzido por amostragem de dados. Diferentes ***random_states*** podem gerar divisões com distribuições de classes ou características distintas. Isto pode favorecer ou penalizar o modelo dependendo da sua \"sorte\" na amostragem. Os algorítmos podem apresentar uma progressão de aprendizado:\n",
+        "\n",
+        "- Gulosa: Rápido aprendizado nas primeiras instâncias. Podem estabilizar cedo demais e deixam de explorar oportunidades de melhoria.\n",
+        "- Conservadora: Demoram para convergir para um resultado satisfatório. Demanda mais instâncias para treinar. Busca por um resultado ótimo.\n",
+        "\n",
+        "Portanto, um modelo pode obter um excelente resultado na validação, porém um desempenho inferior no teste final. \n",
+        "\n",
+        "> Por que é importante repetir os experimentos várias vezes, variando o random_state? O que a repetição traz em termos de confiabilidade dos resultados?\n",
+        "\n",
+        "Ao repetir experimentos, embaralhando as condições iniciais dos conjuntos de dados, estamos testando a maturidade do processo de desenvolvimento utilizado para construir o modelo. Isto responde questionamentos como:\n",
+        "\n",
+        "- Escolhemos o algorítmo correto para o problema de domínio?\n",
+        "- O quão robusto é o modelo frente ao viés no conjunto de dados?\n",
+        "- Precisamos realizar algum ajuste / mitigação no modelo?\n",
+        "\n",
+        "Repetir os experimentos permite obter uma estimativa mais confiável do desempenho médio do modelo.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "7ZF7RT_jEm_B"
       },
@@ -1713,6 +1744,53 @@
     },
     {
       "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Respostas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Conforme o tamanho do conjunto de teste aumenta, como muda a variância no desempenho do modelo? Por que esse comportamento ocorre? \n",
+        "\n",
+        "A variância no desempenho do modelo diminuí a medida que o tamanho do conjunto de teste aumenta. Isto ocorre devido a quantidade de instâncias disponíveis, permitindo testar a capacidade de generalização do modelo para dados desconhecidos."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Ao comparar a amplitude (diferença entre o máximo e o mínimo) do desempenho em diferentes tamanhos de conjunto de teste, o que você observa? \n",
+        "\n",
+        "A amplitude tende a ser maior em conjuntos de testes pequenos, menor em conjuntos grandes."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Qual é a relação entre o tamanho do teste e a amplitude dos resultados?\n",
+        "\n",
+        "A amplitude dos resultados é inversamente proporcional ao tamanho do teste. Baixa amplitude e variância representam estabilidade e confiança na avaliação de desempenho do modelo."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Se a variância dos resultados de acurácia for muito alta, o que isso pode indicar sobre o seu modelo ou sobre a forma como os dados estão sendo divididos?\n",
+        "\n",
+        "Significa que o modelo possui ótimo desempenho para alguns conjuntos de teste, porém péssimo para outros. São sinais que indicam:\n",
+        "\n",
+        "- Poucos dados para avaliar o desempenho do modelo\n",
+        "- Sensiblidade do modelo ao viés de particionamento\n",
+        "- Potêncial desbalanceamento de classe no particionamento dos dados"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "DV7YEZf_Eu39"
       },
@@ -1873,6 +1951,47 @@
         "Mantendo o conjunto de teste fixo, que mudança ou tendência observamos no desempenho dos modelos conforme mais dados de treino são utilizados? Como a amplitude (diferença entre o máximo e o mínimo) do desempenho varia com o tamanho do conjunto de treino? O que isso nos diz sobre a confiabilidade do modelo com tamanhos pequenos de conjunto de treino?\n",
         "\n",
         "---"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Respostas"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Mantendo o conjunto de teste fixo, que mudança ou tendência observamos no desempenho dos modelos conforme mais dados de treino são utilizados?\n",
+        "\n",
+        "Observa-se que o desempenho aumenta proporcional a quantidade de dados adicionadas ao conjunto de treinamento"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> Como a amplitude (diferença entre o máximo e o mínimo) do desempenho varia com o tamanho do conjunto de treino?\n",
+        "\n",
+        "Tanto a amplitude quanto a variância diminuem ao passo que o conjunto de treino aumenta, sinalizando a estabilização do sistema."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "> O que isso nos diz sobre a confiabilidade do modelo com tamanhos pequenos de conjunto de treino?\n",
+        "\n",
+        "Baixa confiabilidade para modelos com poucas instâncias de treino disponíveis. O resultado é um underfit, pois o modelo não conseguiu aprender a resolver o problema de domínio e precisa de mais amostras para melhorar sua precisão.\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Finalização da tarefa"
       ]
     },
     {
